--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 
 <div class="w3-sidebar w3-bar-block" style="display:none" id="mySidebar">
-  <button onclick="w3_close()" class="w3-bar-item w3-button w3-large">Close &times;</button>
-  <a href="#" class="w3-bar-item w3-button">Home</a>
+  <button onclick="w3_close(1)" class="w3-bar-item w3-button w3-large">Close &times;</button>
+  <a href="index.html" class="w3-bar-item w3-button">Home</a>
   <a href="foodpage.html" class="w3-bar-item w3-button">Food</a>
-  <a href="#" class="w3-bar-item w3-button">Main</a>
-  <a href="#" class="w3-bar-item w3-button">Support</a>
+  <a href="support.html" class="w3-bar-item w3-button">Support</a>
 </div>
 
 <div class="w3-teal">
