--- a/foodpage.html
+++ b/foodpage.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, index html">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css2/style.css"> 
     <title>Nti Zoo</title> 
 </head>
 
 
 <div 
     class="w3-sidebar w3-bar-block" style="display:none" id="mySidebar">
-    <button on click="w3_close()" class="w3-bar-item w3-button w3-large">Close &times;</button>
+    <button onclick="w3_close(2)" class="w3-bar-item w3-button w3-large">Close &times;</button>
     <a href="foodpage.html" class="w3-bar-item w3-button">Food</a>
     <a href="index.html" class="w3-bar-item w3-button">Home</a>
-    <a href="#" class="w3-bar-item w3-button">Main</a>
-    <a href="#" class="w3-bar-item w3-button">Support</a>
+    <a href="support.html" class="w3-bar-item w3-button">Support</a>
   </div>
   
   <div class="w3-teal">
