--- a/support.html
+++ b/support.html
@@ -23,9 +23,6 @@
     </div>
   </div>
   
-  <img src="img/persons/Person 1b.jpg" alt=" Support-Chef " style="width:100%">
-  <div class="w3-container">
-  </div>
 
   <script>
     function w3_open() {
@@ -38,108 +35,181 @@
     }
     </script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<div class="header" id="myHeader">
-    <button class="btn active" onclick="one()">1</button>
-    <button class="btn active" onclick="two()">2</button>
-    <button class="btn" onclick="four()">3</button>
+<body>
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 2b.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>John Doe</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
   </div>
+</div>
   
 
-  <div class="row"> 
-    <div class="column">
-      <img src= "img/persons/person 1a.jpg" style=width:100%>
-      <img src= "img/persons/Person 1b.jpg" style=width:100%>
-      <img src= "img/persons/person 2a.jpg" style=width:100%>
-      <img src= "img/persons/person 2b.jpg" style=width:100%>
-      <img src= "img/persons/person 3a.jpg" style=width:100%>
-      <img src= "img/persons/person 3b.jpg" style=width:100%>
-      <img src= "img/persons/person 4a.jpg" style=width:100%>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 1a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
-    
-    <div class="column">
-      <img src=  "img/persons/person 4b.jpg" style=width:100%>
-      <img src=  "img/persons/person 5a.jpg" style=width:100%>
-      <img src=  "img/persons/person 6a.jpg" style=width:100%>
-      <img src=  "img/persons/person 7a.jpg" style=width:100%>
-      <img src=  "img/persons/person 8a.jpg" style=width:100%>
-      <img src=  "img/persons/Person 1b.jpg" style=width:100%>
-    </div>  
-
-    <div class="column">
-      <img src= "img/persons/person 1a.jpg" style=width:100%>
-      <img src= "img/persons/person 2a.jpg" style=width:100%>
-      <img src= "img/persons/person 2b.jpg" style=width:100%>
-      <img src= "img/persons/person 3a.jpg" style=width:100%>
-      <img src= "img/persons/person 3b.jpg" style=width:100%>
-      <img src= "img/persons/person 4a.jpg" style=width:100%>
-      <img src= "img/persons/person 4b.jpg" style=width:100%>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
     </div>
-
-    <div class="column">
-        <img src= "img/persons/person 5a.jpg" style=width:100%>
-        <img src= "img/persons/person 5b.jpg" style=width:100%>
-        <img src= "img/persons/person 6a.jpg" style=width:100%>
-        <img src= "img/persons/person 7a.jpg" style=width:100%>
-        <img src= "img/persons/person 8a.jpg" style=width:100%>
-        <img src= "img/persons/person 1a.jpg" style=width:100%>
-        <img src= "img/persons/Person 1b.jpg" style=width:100%>
-      </div>
-
-    <div class="row">
-      <img src= "img/persons/person 2a.jpg" style=width:100%>
-      <img src= "img/persons/person 2b.jpg" style=width:100%>
-      <img src= "img/persons/person 3a.jpg" style=width:100%>
-      <img src= "img/persons/person 3b.jpg" style=width:100%>
-      <img src= "img/persons/person 4a.jpg" style=width:100%>
-      <img src= "img/persons/person 4b.jpg" style=width:100%>
+  </div>
+</div> 
+ 
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 2b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div>  
 
-  <script>
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 2a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div>  
 
-var elements = document.getElementsByClassName("column");
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 3b.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
 
-var i;
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 3a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 4b.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 4a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 5b.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 5a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 7a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
+
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 6a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
 
 
-function one() {
-for (i = 0; i < elements.length; i++) {
-elements[i].style.msFlex = "100%";  // IE10
-elements[i].style.flex = "100%";
-}
-}
+<div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="img/persons/person 8a.jpg" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Jannie marie</h1> 
+      <p>Architect & Engineer</p> 
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div> 
 
 
-function two() {
-for (i = 0; i < elements.length; i++) {
-elements[i].style.msFlex = "50%";  // IE10
-elements[i].style.flex = "50%";
-}
-}
-
-
-function four() {
-for (i = 0; i < elements.length; i++) {
-elements[i].style.msFlex = "35%";  // IE10
-elements[i].style.flex = "35%";
-}
-}
-
-
-var header = document.getElementById("myHeader");
-var btns = header.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
-btns[i].addEventListener("click", function() {
-var current = document.getElementsByClassName("active");
-current[0].className = current[0].className.replace(" active", "");
-this.className += " active";
-});
-}
-</script>
-
-
-<div class="w3-card-4 w3-margin" style="width: 50%;"> 
-<div class="w3-display-container w3-text-white">
-<div class="w3-xlarge w3-display-bottomleft w3-padding">
-<body>
+</body>
 </html>
