--- a/foodpage.html
+++ b/foodpage.html
@@ -100,7 +100,6 @@
   <script>
 
 
-
 var elements = document.getElementsByClassName("column");
 
 var i;
@@ -139,11 +138,23 @@ current[0].className = current[0].className.replace(" active", "");
 this.className += " active";
 });
 }
+
 </script>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, culpa? Alias possimus sit, est minus asperiores non eius beatae cupiditate similique maiores expedita numquam commodi sint deleniti culpa tenetur quam!</p>
+<p>Aliquid iste, doloremque debitis ducimus expedita aperiam fugit earum nemo. Laborum id tempora iure rerum? Harum ex ea porro error sint explicabo, quas et eligendi id, quos, dignissimos minima quae!</p>
+<p>Minima maxime libero vel debitis voluptatum qui aliquid, illo, repellat hic iste incidunt obcaecati! Nihil cum recusandae, non saepe voluptate neque at sit, omnis illo aliquam, illum ipsum assumenda sapiente.</p>
+<p>Corporis blanditiis itaque ut beatae nihil deserunt ratione molestiae corrupti eum consequatur. Ea excepturi voluptas sunt ut iusto reiciendis amet repellendus deleniti, perspiciatis ad repellat quisquam deserunt ipsam magni! Pariatur.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aperiam, dolorem optio est, quibusdam veniam necessitatibus similique reiciendis culpa, ratione atque ducimus fugit architecto omnis sit error praesentium incidunt illum.</p>
+<p>Quos ipsa corporis atque nam eos exercitationem quisquam impedit iste deleniti cupiditate hic dignissimos architecto, assumenda repellendus tempora ad quaerat placeat sapiente corrupti eaque? Repellendus voluptatibus quos sed ipsum perspiciatis?</p>
+<p>Explicabo qui facere possimus doloribus necessitatibus, error provident. Sint saepe quam deleniti temporibus facilis ad officiis ducimus, quae, a nam minima culpa modi. Amet dolores voluptatum magnam natus perferendis rem.</p>
+<p>Deleniti sunt exercitationem dolor ut error, earum illo perferendis blanditiis impedit tenetur recusandae aspernatur, doloremque quisquam ipsa architecto quo corporis ab. Iusto corrupti amet voluptas facilis numquam perferendis tempore consequuntur.</p>
 
 
 <div class="w3-card-4 w3-margin" style="width: 50%;"> 
 <div class="w3-display-container w3-text-white">
 <div class="w3-xlarge w3-display-bottomleft w3-padding">
+
 <body>
 </html>
+
