Fixat med om oss sidan
Fixat detaljer stött på problem mm.

--- a/support.html
+++ b/support.html
@@ -8,6 +8,7 @@
     <title>Nti Zoo</title> 
 </head>
 
+
 <div 
     class="w3-sidebar w3-bar-block" style="display:none" id="mySidebar">
     <button onclick="w3_close(3)" class="w3-bar-item w3-button w3-large">Close &times;</button>
@@ -42,12 +43,12 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="img/persons/person 2b.jpg" alt="Avatar" style="width:300px;height:300px;">
+      <img src="img/persons/Person 1b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
       <h1>John Doe</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <p>Head Keeper/Aquarist</p> 
+      <p> The boss </p>
     </div>
   </div>
 </div>
@@ -60,8 +61,8 @@
     </div>
     <div class="flip-card-back">
       <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <p> Group leader </p> 
+      <p> Kind and strict</p>
     </div>
   </div>
 </div> 
@@ -72,9 +73,9 @@
       <img src="img/persons/person 2b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Joel Stål </h1> 
+      <p> Office manager </p> 
+      <p> Professionell </p>
     </div>
   </div>
 </div>  
@@ -85,9 +86,9 @@
       <img src="img/persons/person 2a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Ava Ray </h1> 
+      <p>Receptionist</p> 
+      <p>Kindest receptionist that exist</p>
     </div>
   </div>
 </div>  
@@ -98,9 +99,9 @@
       <img src="img/persons/person 3b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> James Brown </h1> 
+      <p> Receptionist </p> 
+      <p> Always respectfull </p>
     </div>
   </div>
 </div> 
@@ -111,9 +112,9 @@
       <img src="img/persons/person 3a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Mia Green </h1> 
+      <p> Marketing manager </p> 
+      <p> Went to Harvard </p>
     </div>
   </div>
 </div> 
@@ -124,9 +125,9 @@
       <img src="img/persons/person 4b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Leopold Dumont </h1> 
+      <p> Purchasing manager </p> 
+      <p> 10 years of experience </p>
     </div>
   </div>
 </div> 
@@ -137,9 +138,9 @@
       <img src="img/persons/person 4a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Nova Karlsson</h1> 
+      <p> Purchasing manager </p> 
+      <p>We love her </p>
     </div>
   </div>
 </div> 
@@ -150,9 +151,9 @@
       <img src="img/persons/person 5b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Sebastian Aars </h1> 
+      <p> Special Events Manager/Coordinator </p> 
+      <p> Creative guy </p>
     </div>
   </div>
 </div> 
@@ -163,9 +164,9 @@
       <img src="img/persons/person 5a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Cora Brown </h1> 
+      <p> Special Events Manager </p> 
+      <p> Always positive energy </p>
     </div>
   </div>
 </div> 
@@ -175,10 +176,10 @@
     <div class="flip-card-front">
       <img src="img/persons/person 7a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
-    <div class="">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+    <div class="flip-card-back">
+      <h1> Lydia Lindgren </h1> 
+      <p> Senior Keeper </p> 
+      <p>________</p>
     </div>
   </div>
 </div> 
@@ -189,9 +190,9 @@
       <img src="img/persons/person 6a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Anna Karlsson </h1> 
+      <p> Director of Research </p> 
+      <p> Zoo lover since 4 of age </p>
     </div>
   </div>
 </div> 
@@ -203,12 +204,14 @@
       <img src="img/persons/person 8a.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Jannie marie</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1> Allison Burgers </h1> 
+      <p> Veterinary Technician </p> 
+      <p> ________ </p>
     </div>
   </div>
 </div> 
+
+
 
 
 </body>
