--- a/support.html
+++ b/support.html
@@ -16,6 +16,7 @@
     <a href="foodpage.html" class="w3-bar-item w3-button">Food</a>
     <a href="index.html" class="w3-bar-item w3-button">Home</a>
   </div>
+
   
   <div class="w3-teal">
     <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
@@ -38,6 +39,21 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<div class="main">
+  <div class="module">
+    <h3lorem5></h3lorem5>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ducimus dolore facilis voluptatibus praesentium iusto ad explicabo, autem itaque cum!</p>
+  </div>
+  <div class="module">
+    <h3lorem5></h3lorem5>
+    <p>Aperiam, laboriosam. Itaque, totam illo? Eveniet dolorem quo eaque voluptatibus expedita voluptatem a debitis odit, commodi impedit nesciunt doloremque omnis!</p>
+  </div>
+  <div class="module">
+    <h3lorem5></h3lorem5>
+    <p>Commodi quidem impedit adipisci est eius. Beatae non doloremque, illum harum ratione culpa at saepe nemo corrupti sit asperiores minus!</p>
+  </div>
+</div>
+
 <body>
 
 <div class="flip-card">
@@ -46,9 +62,10 @@
       <img src="img/persons/Person 1b.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>John Doe</h1> 
-      <p>Head Keeper/Aquarist</p> 
+      <h1> Johnny rain </h1> 
+      <p> Head Keeper/Aquarist </p> 
       <p> The boss </p>
+      <p> Support_Zoo@hotmail.com </p>
     </div>
   </div>
 </div>
@@ -63,6 +80,7 @@
       <h1>Jannie marie</h1> 
       <p> Group leader </p> 
       <p> Kind and strict</p>
+      <p> Support_Zoo@hotmail.com </p>
     </div>
   </div>
 </div> 
@@ -76,6 +94,8 @@
       <h1> Joel Stål </h1> 
       <p> Office manager </p> 
       <p> Professionell </p>
+      <p> Support_Zoo@hotmail.com </p>
+
     </div>
   </div>
 </div>  
@@ -89,6 +109,8 @@
       <h1> Ava Ray </h1> 
       <p>Receptionist</p> 
       <p>Kindest receptionist that exist</p>
+      <p> Support_Zoo@hotmail.com </p>
+
     </div>
   </div>
 </div>  
@@ -102,6 +124,8 @@
       <h1> James Brown </h1> 
       <p> Receptionist </p> 
       <p> Always respectfull </p>
+      <p> Support_Zoo@hotmail.com </p> 
+
     </div>
   </div>
 </div> 
@@ -115,6 +139,8 @@
       <h1> Mia Green </h1> 
       <p> Marketing manager </p> 
       <p> Went to Harvard </p>
+      <p> Support_Zoo@hotmail.com </p> 
+
     </div>
   </div>
 </div> 
@@ -128,6 +154,8 @@
       <h1> Leopold Dumont </h1> 
       <p> Purchasing manager </p> 
       <p> 10 years of experience </p>
+      <p> Support_Zoo@hotmail.com </p> 
+
     </div>
   </div>
 </div> 
@@ -141,6 +169,8 @@
       <h1> Nova Karlsson</h1> 
       <p> Purchasing manager </p> 
       <p>We love her </p>
+      <p> Support_Zoo@hotmail.com </p> 
+
     </div>
   </div>
 </div> 
@@ -154,6 +184,8 @@
       <h1> Sebastian Aars </h1> 
       <p> Special Events Manager/Coordinator </p> 
       <p> Creative guy </p>
+      <p> Support_Zoo@hotmail.com </p> 
+
     </div>
   </div>
 </div> 
@@ -167,6 +199,8 @@
       <h1> Cora Brown </h1> 
       <p> Special Events Manager </p> 
       <p> Always positive energy </p>
+      <p> Support_Zoo@hotmail.com </p> 
+
     </div>
   </div>
 </div> 
@@ -180,6 +214,8 @@
       <h1> Lydia Lindgren </h1> 
       <p> Senior Keeper </p> 
       <p>________</p>
+      <p> Support_Zoo@hotmail.com </p>
+
     </div>
   </div>
 </div> 
@@ -193,6 +229,8 @@
       <h1> Anna Karlsson </h1> 
       <p> Director of Research </p> 
       <p> Zoo lover since 4 of age </p>
+      <p> Support_Zoo@hotmail.com </p>
+
     </div>
   </div>
 </div> 
@@ -207,11 +245,11 @@
       <h1> Allison Burgers </h1> 
       <p> Veterinary Technician </p> 
       <p> ________ </p>
+      <p> Support_Zoo@hotmail.com </p>
+
     </div>
   </div>
 </div> 
-
-
 
 
 </body>
