--- a/foodpage.html
+++ b/foodpage.html
@@ -20,7 +20,7 @@
   <div class="w3-teal">
     <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
     <div class="w3-container">
-      <h1>Food To Eat</h1>
+      <h1> What to eat here </h1>
     </div>
   </div>
   
@@ -36,14 +36,15 @@
     
     function w3_close() {
       document.getElementById("mySidebar").style.display = "block";
+      document.getElementById("mySidebar").style.width = "100%";
     }
     </script>
 
 
 <div class="header" id="myHeader">
-    <button class="btn active" onclick="one()">1</button>
-    <button class="btn active" onclick="two()">2</button>
-    <button class="btn" onclick="four()">3</button>
+    <button class="btn active" onclick="one(1)">1</button>
+    <button class="btn active" onclick="two(2)">2</button>
+    <button class="btn" onclick="four(3)">3</button>
   </div>
   
 
@@ -107,8 +108,8 @@ var i;
 
 function one() {
 for (i = 0; i < elements.length; i++) {
-elements[i].style.msFlex = "100%";  // IE10
-elements[i].style.flex = "100%";
+elements[i].style.msFlex = "150%";  // IE10
+elements[i].style.flex = "150%";
 }
 }
 
@@ -117,6 +118,13 @@ function two() {
 for (i = 0; i < elements.length; i++) {
 elements[i].style.msFlex = "50%";  // IE10
 elements[i].style.flex = "50%";
+}
+}
+
+function three() {
+for (i = 0; i < elements.length; i++) {
+elements[i].style.msFlex = "100%";  // IE10
+elements[i].style.flex = "100%";
 }
 }
 
